// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly a set color 1`] = `
<Layout__Block
  color="pink"
>
  <Layout__VerticalSpacer
    size="large"
  />
  <div>
    Hello
  </div>
  <div>
    World
  </div>
  <Layout__VerticalSpacer
    size="large"
  />
</Layout__Block>
`;

exports[`renders correctly with children 1`] = `
<Layout__Block
  color="blue"
>
  <Layout__VerticalSpacer
    size="large"
  />
  <div>
    Hello
  </div>
  <div>
    World
  </div>
  <Layout__VerticalSpacer
    size="large"
  />
</Layout__Block>
`;

exports[`renders without padding 1`] = `
<Layout__Block
  color="blue"
>
  <div>
    Hello
  </div>
  <div>
    World
  </div>
</Layout__Block>
`;
